.provarCaches/00D6C0000000xA6UAI/objects/sked__Job_Dependency__c.object
<CustomObject>
    <fields>
        <fullName>sked__From_Anchor__c</fullName>
        <label>From Anchor</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Start</fullName>
                    <default>true</default>
                    <label>Start</label>
                </value>
                <value>
                    <fullName>End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__From_Job__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>From Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Job Dependencies From</relationshipLabel>
        <relationshipName>Job_Dependencies_From</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__To_Anchor_Max_Offset_Minutes__c</fullName>
        <label>To Anchor Max Offset Minutes</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__To_Anchor_Min_Offset_Minutes__c</fullName>
        <label>To Anchor Min Offset Minutes</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sked__To_Anchor__c</fullName>
        <label>To Anchor</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Start</fullName>
                    <default>true</default>
                    <label>Start</label>
                </value>
                <value>
                    <fullName>End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__To_Job__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>To Job</label>
        <referenceTo>sked__Job__c</referenceTo>
        <relationshipLabel>Job Dependencies To</relationshipLabel>
        <relationshipName>Job_Dependencies_To</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Job Dependency</label>
    <nameField>
        <displayFormat>JD-{00000}</displayFormat>
        <label>Job Dependency Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Dependencies</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>sked__Min_Offset_not_greater_than_Max_Offset</fullName>
        <active>true</active>
        <description>ToAnchorMinOffsetMinutes cannot be greater than ToAnchorMaxOffsetMinutes.</description>
        <errorConditionFormula>sked__To_Anchor_Min_Offset_Minutes__c &gt; sked__To_Anchor_Max_Offset_Minutes__c</errorConditionFormula>
        <errorMessage>ToAnchorMinOffsetMinutes cannot be greater than ToAnchorMaxOffsetMinutes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__Min_Offset_or_Max_Offset_or_both</fullName>
        <active>true</active>
        <description>Either ToAnchorMinOffsetMinutes or ToAnchorMaxOffsetMinutes must be specified, or both.</description>
        <errorConditionFormula>AND(
  ISBLANK(sked__To_Anchor_Min_Offset_Minutes__c),
  ISBLANK(sked__To_Anchor_Max_Offset_Minutes__c)
)</errorConditionFormula>
        <errorMessage>ToAnchorMinOffsetMinutes and ToAnchorMaxOffsetMinutes cannot be both unspecified.</errorMessage>
    </validationRules>
</CustomObject>